force-app/main/default/objects/Lecture__c/Lecture__c.object-meta.xml
<CustomObject>
    <label>Lecture</label>
    <nameField>
        <label>Lecture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lectures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>