force-app/main/default/objects/Lecture__c/fields/Scheduled_At__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_At__c</fullName>
    <label>Scheduled At</label>
    <type>DateTime</type>
</CustomField>