force-app/main/default/objects/Lecture__c/recordTypes/Offline_Lecture.recordType-meta.xml
<RecordType>
    <fullName>Offline_Lecture</fullName>
    <active>true</active>
    <label>Offline Lecture</label>
</RecordType>