force-app/main/default/objects/Lecture__c/recordTypes/Online_Lecture.recordType-meta.xml
<RecordType>
    <fullName>Online_Lecture</fullName>
    <active>true</active>
    <label>Online Lecture</label>
</RecordType>